Fixed API routes