@@ -2,7 +2,6 @@ package com.sattva.sattva_backend.config;
 
 import com.sattva.sattva_backend.security.JwtFilter;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -14,6 +13,8 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -23,32 +24,25 @@ public class SecurityConfig {
     @Autowired
     private JwtFilter jwtFilter;
 
-    @Value("${cors.allowed-origins}")
-    private String allowedOrigins;
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable()) // Disable CSRF for REST APIs
+            .csrf(csrf -> csrf.disable())
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            // STATELESS = no server sessions, we use JWT instead
             .authorizeHttpRequests(auth -> auth
-                // PUBLIC routes - anyone can access
                 .requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers(HttpMethod.GET, "/api/events/**").permitAll()
                 .requestMatchers("/api/events/*/register").permitAll()
                 .requestMatchers("/api/payments/**").permitAll()
                 .requestMatchers("/api/contact").permitAll()
                 .requestMatchers("/uploads/**").permitAll()
-                // PROTECTED routes - require JWT token (admin only)
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // ← Allow preflight
                 .requestMatchers(HttpMethod.POST, "/api/events").authenticated()
                 .requestMatchers(HttpMethod.PUT, "/api/events/**").authenticated()
                 .requestMatchers(HttpMethod.DELETE, "/api/events/**").authenticated()
-                // All other routes require authentication
                 .anyRequest().authenticated()
             )
-            // Add our JWT filter before the default auth filter
             .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -57,13 +51,22 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of(allowedOrigins)); // Allow our React frontend
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(List.of("*")); // Allow all headers
-        config.setAllowCredentials(true);
+        
+        // Allow ALL origins for now (we'll restrict later)
+        config.setAllowedOriginPatterns(List.of("*"));
+        
+        config.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+        ));
+        config.setAllowedHeaders(Arrays.asList(
+            "Authorization", "Content-Type", "Accept", 
+            "Origin", "X-Requested-With"
+        ));
+        config.setAllowCredentials(false); // Must be false when using wildcard origin
+        config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config); // Apply to all routes
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
